feat: add experimental support for Virtual Threads (#4600)